# torchCompactRadius

./: .gitignore  Benchmark.ipynb  INSTALL.md  MANIFEST.in  PYPI_SETUP_COMPLETE.md  README.md  Testing.ipynb  UPLOAD_GUIDE.md  build.sh  build2.sh  build_and_upload.sh  build_backend.py  check_environment.py  dsl.py  env.sh  genhtmls.py  index.html  neighborhoodDebug.ipynb  neighborhoodFixed_cpu.cpp  neighborhoodSmall.ipynb  pyproject.toml  setup.cfg  setup.py  setup_envs.sh  setup_envs_2_7.sh  test.h  test.ipynb  test_build.py  test_build.sh  toml.ipynb  upload_to_pypi.sh
.VSCodeCounter/2025-04-25_09-11-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: building-conda-macos.yml  building-conda-ubuntu.yml  building-conda-windows.yml  building-conda.yml  building-macos.yml  building-ubuntu.yml  building-windows.yml  building.yml
bak/: buildNeighborhood_mlm.h  buildNeighborhood_mlm_cpu.cpp  countNeighbors_mlm.h  countNeighbors_mlm_cpu.cpp  countNeighbors_mlm_cuda.cu
conda/torchCompactRadius/: meta.yaml
output/: benchmark.csv
scripts/: benchmark.py  demo.py  test copy.py  test.py
src/torchCompactRadius/: __init__.py  cellTable.py  compiler.py  cppSearch.py  cppWrapper.py  hashTable.py  neighborhood.py  pythonSearch.py  pythonSearchDynamic.py  pythonSearchFixed.py  radiusNaive.py  setup.py  util.py
wheels/torch-2.5.0+cpu/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp311-cp311-macosx_10_9_universal2.whl  torchCompactRadius-0.2.4-cp311-cp311-win_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.6-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.3.0-cp311-cp311-linux_x86_64.whl
wheels/torch-2.5.0+cu118/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_amd64.whl  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.6-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.3.0-cp311-cp311-linux_x86_64.whl
wheels/torch-2.5.0+cu121/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_amd64.whl  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.6-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.3.0-cp311-cp311-linux_x86_64.whl
wheels/torch-2.5.0+cu124/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.6-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.3.0-cp311-cp311-linux_x86_64.whl
wheels/torch-2.5.1+cpu/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.6-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.3.0-cp311-cp311-linux_x86_64.whl
wheels/torch-2.5.1+cu118/: index.html  torchCompactRadius-0.2.4-cp311-cp311-linux_x86_64.whl  torchCompactRadius-0.2.4-cp312-cp312-linux_x86_64.whl  torchCompactRadius-0.2.4-cp39-cp39-linux_x86_64.whl  torchCompactRadius-0.2.5-cp311-cp311-linux_x86_64.whl  (+2 more)
(+95 files in other folders)
