[project]
name = "torchCompactRadius"
version = "0.2.6"
authors = [
  { name="Rene Winchenbach", email="contact@fluids.dev" },
]
maintainers = [
  { name="Rene Winchenbach", email="contact@fluids.dev" },
]
description = "Compact Hashing based radius search for pyTorch using C++/CUDA backends."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sph","radius","pytorch"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch", "numpy"
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/wi-re/torchCompactRadius"
Issues = "https://github.com/wi-re/torchCompactRadius/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # <-- this changed

[tool.setuptools.package-data]
"*" = ["*.*"] # <-- this changed