[metadata]
name = torchCompactRadius
version = 0.5.5
author = Rene Winchenbach
author_email = contact@fluids.dev
description = PyTorch Extension Library for compact hash map based neighbor searching Algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wi-re/torchCompactRadius
keywords = pytorch, geometric-deep-learning, graph-neural-networks, cluster-algorithms
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    torch>=1.9.0
    numpy
    scipy
include_package_data = True

[options.packages.find]
where = src

[bdist_wheel]
py_limited_api = cp39
